--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,68 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+body {
+    margin: 0;
+    padding: 0;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+      "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+      sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+  
+    display: flex;
+    height: 100vh;
+    align-items: center;
+    justify-content: center;
+  
+    background-image: linear-gradient(to top, #fbc2eb 0%, #a6c1ee 100%);
   }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
+  
+  .App {
+    background: rgba(0, 0, 0, 0.2);
+    border: 1px solid rgba(0, 0 ,0, 0.3);
+    padding: 1rem 2rem;
   }
-  to {
-    transform: rotate(360deg);
+  
+  form > div {
+    margin-bottom: 0.5rem;
   }
-}
+  
+  label {
+    margin-right: 0.5rem;
+  }
+  
+  input {
+    border: 1px solid rgba(0, 0 ,0, 0.5);
+    font-size: 1rem;
+    padding: 4px;
+  }
+  
+  button {
+    background: #7067CFAA;
+    padding: 4px;
+    border: 1px solid rgba(0, 0 ,0, 0.5);
+    color: white;
+    font-size: 1rem;
+    width: 100%;
+  }
+  
+  .Welcome {
+    width: 100%;
+  }
+  
+  .Navigation {
+    margin-bottom: 1rem;
+  }
+  
+  .Navigation ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+  }
+  
+  .Navigation li {
+    display: inline-block;
+  }
+  
+  .Navigation a {
+    display: block;
+    padding: 4px;
+  }
